[gd_scene load_steps=6 format=3 uid="uid://bu46qyjcwi1aa"]

[ext_resource type="Script" uid="uid://cp1llc1fv0spa" path="res://deck_card_display.gd" id="1_phhj4"]
[ext_resource type="Texture2D" uid="uid://clxm4jhwfbd5e" path="res://Assets/CardImagesDECK/EarthSpellsDeck/desert.png" id="2_a25vp"]
[ext_resource type="Texture2D" uid="uid://cndxqb5qkwdl2" path="res://Assets Collezione/INVALID BANNER ICON.png" id="2_xvigq"]
[ext_resource type="Texture2D" uid="uid://chri0ibr8ja5e" path="res://Assets Collezione/HighlightborderDeckDisplay.png" id="3_xvigq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjbxk"]
size = Vector2(265, 28)

[node name="Card" type="Node2D"]
script = ExtResource("1_phhj4")

[node name="InvalidBanner" type="Sprite2D" parent="."]
visible = false
z_index = -2
position = Vector2(261, -1.69873e-06)
scale = Vector2(1, 0.914286)
texture = ExtResource("2_xvigq")

[node name="CardSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_a25vp")

[node name="HighlightBorder" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(44.4259, -5)
scale = Vector2(1.019, 1.019)
texture = ExtResource("3_xvigq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, 0)
shape = SubResource("RectangleShape2D_gjbxk")
